OJ/work_dir/2/error.txt
main.c: In function ‘main’:
main.c:6:19: error: expected identifier before ‘&’ token
 scanf("%d%d", &a. &b);
                   ^
